--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,3 +1,14 @@
 body {
   background-color: gray;
 }
+
+.App {
+  /* border: 1px solid red; */
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+.pusher  {
+  height: 50px;
+}
