--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,14 +1,12 @@
 body {
-  background-color: gray;
+  background-color: #f5f5f5;
 }
 
-.App {
+.page {
   /* border: 1px solid red; */
   display: flex;
+  max-width: 1440px;
+  margin: auto;
   min-height: 100vh;
   flex-direction: column;
-}
-
-.pusher  {
-  height: 50px;
 }
