--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,12 @@
+.header-container {
+  display: flex;
+  border: 1px solid pink;
+  width: 100vw;
+  justify-content: center;
+}
+
 .header {
+  z-index: 100;
   margin: 0;
   padding: 4px 104px 0;
   display: flex;
@@ -7,6 +15,8 @@
   max-width: 1440px;
   background: rgba(196, 196, 196, 0.01);
   box-shadow: inset 0px -1px 0px rgba(255, 255, 255, 0.2);
+  /* border: 1px solid greenyellow; */
+
 }
 
 .header__mobile-container {
