--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -38,7 +38,7 @@
 
 .about__info-content {
   max-width: 600px;
-  margin: 0;
+  margin: 0 0 128px;
   font-family: Roboto;
   font-style: normal;
   font-weight: normal;
