--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -16,7 +16,6 @@
   background: rgba(196, 196, 196, 0.01);
   box-shadow: inset 0px -1px 0px rgba(255, 255, 255, 0.2);
   /* border: 1px solid greenyellow; */
-
 }
 
 .header__mobile-container {
@@ -132,11 +131,14 @@
 
   .header__mobile-container {
     width: 100%;
+    height: 56px;
     box-shadow: inset 0px -1px 0px rgba(255, 255, 255, 0.2);
   }
 
   .header__logo {
     margin-left: 16px;
+    font-size: 16px;
+    line-height: 24px;
   }
 
   .header__menu {
