--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -34,3 +34,104 @@
 .search {
   margin-top: 88px;
 }
+
+.search-field {
+  box-sizing: border-box;
+  padding: 24px;
+  height: 64px;
+  border: none;
+  border-radius: 100px;
+  width: 608px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 22px;
+}
+
+.search-field::placeholder {
+  color: rgba(182, 188, 191, 1);
+}
+
+.search-button {
+  color: white;
+  background-color: rgba(47, 113, 229, 1);
+  box-sizing: border-box;
+  border-radius: 100px;
+  border: none;
+  margin-left: -168px;
+  width: 168px;
+  height: 65px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 24px;
+  cursor: pointer;
+}
+
+.search-button:hover {
+  background-color: rgba(52, 126, 255, 1);
+}
+
+.search-button:active {
+  background-color: rgba(42, 101, 204, 1);
+}
+
+@media screen and (max-width: 900px) {
+  .search-field {
+    width: 452px;
+  }
+
+  .search-form__title {
+    max-width: 452px;
+    font-size: 36px;
+    line-height: 40px;
+  }
+
+  .search-form__subtitle {
+    margin: 16px 0 0;
+    max-width: 452px;
+  }
+
+  .search-button {
+    width: 160px;
+    margin-left: -160px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .search-form__container {
+    margin-top: -56px;
+    padding: 86px 16px 32px;
+  }
+
+  .search {
+    display: flex;
+    gap: 16px;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .search-form__title {
+    font-family: Roboto Slab;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 36px;
+    line-height: 40px;
+  }
+
+  .search-form__subtitle {
+    margin: 16px 0 0;
+  }
+
+  .search-field {
+    /* min-width: 288px; */
+    width: 100%;
+  }
+
+  .search-button {
+    width: 100%;
+    margin-left: 0;
+  }
+}
