--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -101,9 +101,13 @@
   color: #1a1b22;
   overflow: hidden;
   text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 
-.newscard__text {
+.newscard__text-container {
+  display: inline-block;
   margin: 0;
   font-family: Roboto;
   font-style: normal;
@@ -112,13 +116,21 @@
   line-height: 22px;
   color: #1a1b22;
   max-height: 110px;
+}
+
+.newscard__text-container p {
+  margin: 0;
   overflow: hidden;
   text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
 }
 
 .newscard__source {
+  width: 192px;
   position: absolute;
-  bottom: 24px;
+  bottom: 10px;
   left: 24px;
   font-family: Roboto Slab;
   font-style: normal;
@@ -128,4 +140,108 @@
   letter-spacing: 0.4px;
   text-transform: uppercase;
   color: #b6bcbf;
+}
+
+.newscard__source p {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+@media screen and (max-width: 900px) {
+  .newscard {
+    max-width: 224px;
+    height: 420px;
+  }
+
+  .newscard__image {
+    height: 150px;
+  }
+
+  .newscard__add-remove-tip {
+    display: none;
+  }
+
+  .newscard__add-remove-button {
+    top: 8px;
+    right: 8px;
+  }
+
+  .newscard__tag {
+    top: 8px;
+    left: 8px;
+  }
+
+  .newscard__content {
+    padding: 16px;
+  }
+
+  .newscard__date {
+    margin-top: 4px;
+  }
+
+  .newscard__title {
+    height: 72px;
+    font-size: 22px;
+    line-height: 24px;
+    -webkit-line-clamp: 3;
+    margin: 12px 0 10px;
+  }
+
+  .newscard__text-container p {
+    max-width: 192px;
+    max-height: 88px;
+  }
+
+  .newscard__source {
+    max-width: 192px;
+    bottom: 0px;
+    left: 16px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .newscard {
+    height: 430px;
+    max-width: 100%;
+  }
+
+  .newscard__image {
+    height: 196px;
+  }
+
+  .newscard__add-remove-tip {
+  }
+
+  .newscard__add-remove-button {
+  }
+
+  .newscard__tag {
+  }
+
+  .newscard__content {
+  }
+
+  .newscard__date {
+    margin: 0;
+  }
+
+  .newscard__title {
+    height:auto;
+    max-width: 100%;
+    font-size: 22px;
+    line-height: 24px;
+    -webkit-line-clamp: 2;
+    margin: 10px 0 14px;
+  }
+
+  .newscard__text-container {
+  }
+
+  .newscard__text-container p {
+    max-width: 100%;
+  }
+
+  .newscard__source {
+  }
 }
