--- a/src/components/NewsCardList/NewsCardList.css
+++ b/src/components/NewsCardList/NewsCardList.css
@@ -1,3 +1,14 @@
 .newsCardList__container {
   padding: 62px 102px;
 }
+
+@media screen and (max-width: 600px) {
+  .newsCardList__container {
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: stretch;
+    padding: 16px 24px;
+  }
+}
