--- a/src/components/NewsCardList/NewsCardList.css
+++ b/src/components/NewsCardList/NewsCardList.css
@@ -1,9 +1,27 @@
-.newsCardList__container {
+.cardList {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.cardList__container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 16px;
   padding: 62px 102px;
 }
 
+.cardList__button {
+  width: 288px;
+  height: 64px;
+  background: #ffffff;
+  border-radius: 80px;
+  border: none;
+  margin-top: 2px;
+  cursor: pointer;
+}
+
 @media screen and (max-width: 600px) {
-  .newsCardList__container {
+  .cardList__container {
     max-width: 100%;
     display: flex;
     flex-direction: column;
