--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,4 @@
 @import url(./components/SavedNews/SavedNews.css);
 @import url(./components/SavedNewsHeader/SavedNewsHeader.css);
 @import url(./components/SearchForm/SearchForm.css);
+@import url(./components/NotFound/NotFound.css);
