--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -64,13 +64,23 @@
   text-overflow: ellipsis;
 }
 
-.newscard__add-remove-button {
+.newscard__remove-button {
   position: absolute;
   top: 24px;
   right: 24px;
   height: 40px;
   width: 40px;
   background-image: url(../../images/svg/delete-active.svg);
+  cursor: pointer;
+}
+
+.newscard__save-button {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  height: 40px;
+  width: 40px;
+  background-image: url(../../images/svg/bookmark-not-saved.svg);
   cursor: pointer;
 }
 
@@ -148,6 +158,12 @@
   white-space: nowrap;
 }
 
+@media screen and (max-width: 1250px) {
+  .newscard__add-remove-tip {
+    visibility: hidden;
+  }
+}
+
 @media screen and (max-width: 900px) {
   .newscard {
     max-width: 224px;
@@ -156,10 +172,6 @@
 
   .newscard__image {
     height: 150px;
-  }
-
-  .newscard__add-remove-tip {
-    display: none;
   }
 
   .newscard__add-remove-button {
@@ -227,7 +239,7 @@
   }
 
   .newscard__title {
-    height:auto;
+    height: auto;
     max-width: 100%;
     font-size: 22px;
     line-height: 24px;
