--- a/src/components/Preloader/preloader.html
+++ b/src/components/Preloader/preloader.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>preloader</title>
-    <link rel="stylesheet" href="./preloader.css">
+    <link rel="stylesheet" href="./Preloader.css">
 </head>
 <body>
     <i class="circle-preloader"></i>
