--- a/src/components/SavedNewsHeader/SavedNewsHeader.css
+++ b/src/components/SavedNewsHeader/SavedNewsHeader.css
@@ -39,6 +39,31 @@
   font-weight: bold;
 }
 
+@media screen and (max-width: 900px) {
+  .saved-header {
+    padding: 24px 40px 32px;
+  }
+
+  .saved-header__section-name {
+    font-family: Roboto Arial, Helvetica, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
+    color: rgba(26, 27, 34, 0.5);
+  }
+
+  .saved-header__title {
+    margin: 16px 0 16px;
+    font-family: Roboto Slab, Arial, Helvetica, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 30px;
+    line-height: 34px;
+    color: #1a1b22;
+  }
+}
+
 @media screen and (max-width: 600px) {
   .saved-header {
     padding: 8px 16px 32px;
