--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -1,5 +1,7 @@
 .search-form__container {
-  background-image: url(https://images.unsplash.com/photo-1642948484967-512358557f6c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2671&q=80);
+  background-image: url(../../images/georgia-de-lotz--UsJoNxLaNo-unsplash.png);
+  background-position: center;
+  background-size: cover;
   margin-top: -80px;
   padding: 160px 0 80px;
   display: flex;
