--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -158,6 +158,11 @@ a {
     box-shadow: inset 0px -1px 0px rgba(255, 255, 255, 0.2);
   }
 
+  .header__navigation-links {
+    display: flex;
+    flex-direction: column;
+  }
+
   .header__logo {
     margin-left: 16px;
     font-size: 16px;
