--- a/src/components/SavedNews/SavedNews.css
+++ b/src/components/SavedNews/SavedNews.css
@@ -23,7 +23,7 @@
 }
 @media screen and (max-width: 600px) {
   .saved-news__container {
-    width: calc(100% - 32px);
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 10px;
