even more almost here

--- a/src/components/PopupWithForm/PopupWithForm.css
+++ b/src/components/PopupWithForm/PopupWithForm.css
@@ -163,6 +163,7 @@
   background-color: transparent;
   border: none;
   color: #2f71e5;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 600px) {
