--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -8,7 +8,7 @@
 .header {
   z-index: 100;
   margin: 0;
-  padding: 4px 104px 0;
+  padding: 0 104px 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
