--- a/src/components/NewsCardList/NewsCardList.css
+++ b/src/components/NewsCardList/NewsCardList.css
@@ -23,14 +23,14 @@
   font-weight: 500;
   font-size: 18px;
   line-height: 24px;
-  color: #1A1B22;
+  color: #1a1b22;
   opacity: 1;
-  transition: opacity ease 0.5s ;
+  transition: opacity ease 0.5s;
   margin-bottom: 80px;
 }
 
 .cardList__button:hover {
-  opacity: 0.9;
+  opacity: 90%;
 }
 
 @media screen and (max-width: 900px) {
