--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -32,6 +32,7 @@
   border-radius: 8px;
   margin: auto;
   padding: 0 22px;
+  white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
