basic design done

--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,4 @@
 @import url(./components/SignInPopup/SignInPopup.css);
 @import url(./components/SignUpPopup/SignUpPopup.css);
 @import url(./components/SuccessPopup/SuccessPopup.css);
+@import url(./components/SortMenu/SortMenu.css);
