--- a/src/components/SavedNewsHeader/SavedNewsHeader.css
+++ b/src/components/SavedNewsHeader/SavedNewsHeader.css
@@ -39,6 +39,33 @@
   font-weight: bold;
 }
 
+.keywords-container {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.sort-button {
+  width: 32px;
+  height: 32px;
+  border: none;
+  border-radius: 16px;
+  background-color: transparent;
+  background-image: url(../../images/svg/sort.svg);
+  background-size: contain;
+  opacity: 0.5;
+  transition: opacity ease 0.3s;
+}
+
+.sort-button:hover {
+  opacity: 1;
+}
+
+.sort-button:focus {
+  border: none;
+}
+
 @media screen and (max-width: 900px) {
   .saved-header {
     padding: 24px 40px 32px;
