--- a/src/components/SavedNewsHeader/SavedNewsHeader.css
+++ b/src/components/SavedNewsHeader/SavedNewsHeader.css
@@ -55,14 +55,19 @@
   background-size: contain;
   opacity: 0.5;
   transition: opacity ease 0.3s;
+  cursor: pointer;
 }
 
 .sort-button:hover {
-  opacity: 1;
+  opacity: 0.7;
 }
 
 .sort-button:focus {
   border: none;
+}
+
+.sort-button:active {
+  opacity: 1;
 }
 
 @media screen and (max-width: 900px) {
