--- a/src/components/SortMenu/SortMenu.css
+++ b/src/components/SortMenu/SortMenu.css
@@ -29,12 +29,25 @@
 }
 
 .sortMenu__list-item {
-  padding: 0 32px 0 24px;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  padding: 0 32px 0 8px;
   font-size: 14px;
   line-height: 26px;
   cursor: pointer;
   background-color: white;
   transition: background-color ease 0.3s;
+}
+
+.checkmark {
+  visibility: hidden;
+  margin: 0 5px 0 0;
+  padding: 0;
+}
+
+.checkmark_visible {
+  visibility: visible;
 }
 
 .sortMenu__list-item:hover {
