grid width fixed

--- a/src/components/NewsCardList/NewsCardList.css
+++ b/src/components/NewsCardList/NewsCardList.css
@@ -5,7 +5,8 @@
 }
 .cardList__container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+  /* grid-template-columns: 1fr 1fr 1fr; */
   gap: 16px;
   padding: 62px 102px;
 }
